# cpp_course_basic

./: CMakeLists.txt  README.md
source/: hello_world.cpp
